--- a/instagram/package.json
+++ b/instagram/package.json
@@ -11,7 +11,8 @@
     "react": "^16.8.2",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.2",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
