--- a/instagram/package.json
+++ b/instagram/package.json
@@ -7,10 +7,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.3.1",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.2",
+    "react-moment": "^0.8.4",
     "react-scripts": "2.1.5",
     "styled-components": "^4.1.3"
   },
